refactor: Replace the StrUtil of hutool with StringUtils of commons-lang3